apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: parcial-amcr
spec:
  ingressClassName: traefik
  rules:
    - host: app1.parcial.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: parcial-amcr
spec:
  ingressClassName: traefik
  rules:
    - host: app2.parcial.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
  namespace: parcial-amcr
spec:
  ingressClassName: traefik
  rules:
    - host: app3.parcial.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app4-ingress
  namespace: parcial-amcr
spec:
  ingressClassName: traefik
  rules:
    - host: app4.parcial.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app4-service
                port:
                  number: 80
